WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
279259
Fix uninitialized variables in RenderLayer
https://bugs.webkit.org/show_bug.cgi?id=279259
Summary
Fix uninitialized variables in RenderLayer
Nikolas Zimmermann
Reported
2024-09-06 03:26:03 PDT
There are a few uninitialized variables in RenderLayer, showing up as uninitialized reads in valgrind, fix that.
Attachments
Add attachment
proposed patch, testcase, etc.
Nikolas Zimmermann
Comment 1
2024-09-06 03:27:59 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/33235
Radar WebKit Bug Importer
Comment 2
2024-09-13 03:27:16 PDT
<
rdar://problem/135944588
>
EWS
Comment 3
2024-09-13 12:22:07 PDT
Committed
283641@main
(345a8422657f): <
https://commits.webkit.org/283641@main
> Reviewed commits have been landed. Closing PR #33235 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug