Fix uninitialized variables in RenderLayer https://bugs.webkit.org/show_bug.cgi?id=279259

Reviewed by Simon Fraser.

Make sure that the variables m_intrinsicallyComposited,
m_hasIntrinsicallyCompositedDescendants(StatusDirty)
are properly initialized.

Otherwise this spoofs valgrind with lots of error messages,
regarding uninitialized reads -- covered by existing tests.

* Source/WebCore/rendering/RenderLayer.h:

Canonical link: https://commits.webkit.org/283641@main